@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>vaadin-flow-components</artifactId>
-  <version>18.0-SNAPSHOT</version>
+  <version>19.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Vaadin Flow Components Root Project</name>
   <parent>
@@ -11,8 +11,8 @@
     <version>2.0.2</version>
   </parent>
   <properties>
-    <flow.version>5.0-SNAPSHOT</flow.version>
-    <testbench.version>6.4.0.alpha2</testbench.version>
+    <flow.version>6.0-SNAPSHOT</flow.version>
+    <testbench.version>6.4.0</testbench.version>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -21,18 +21,20 @@
     <jetty.version>9.4.15.v20190215</jetty.version>
     <jetty.http.port>8080</jetty.http.port>
     <jetty.stop.port>9999</jetty.stop.port>
-    <maven.failsafe.plugin.version>2.19.1</maven.failsafe.plugin.version>
+    <maven.failsafe.plugin.version>2.20</maven.failsafe.plugin.version>
     <maven.resources.plugin.version>3.0.2</maven.resources.plugin.version>
     <maven.deploy.plugin.version>2.8.2</maven.deploy.plugin.version>
     <driver.binary.downloader.maven.plugin.version>1.0.18
         </driver.binary.downloader.maven.plugin.version>
-    <testbench.testsInParalel>2</testbench.testsInParalel>
-    <testbench.runLocaly>CHROME</testbench.runLocaly>
-    <failsafe.forkCount>2</failsafe.forkCount>
+    <failsafe.forkCount>4</failsafe.forkCount>
+    <com.vaadin.tests.SharedBrowser.reuseBrowser>true</com.vaadin.tests.SharedBrowser.reuseBrowser>
+    <com.vaadin.testbench.Parameters.testsInParallel>1</com.vaadin.testbench.Parameters.testsInParallel>
+    <failIfNoTests>false</failIfNoTests>
     <vaadin.pnpm.enable>false</vaadin.pnpm.enable>
     <powermock.version>1.7.1</powermock.version>
     <jackson.version>2.9.10.4</jackson.version>
-    <ci-sauce.version>1.138</ci-sauce.version>
+    <sauce-connect.version>2.1.25</sauce-connect.version>
+    <ci-sauce.version>1.149</ci-sauce.version>
     <sauce.options>--tunnel-identifier ${maven.build.timestamp}</sauce.options>
     <osgi.bundle.import.package>*</osgi.bundle.import.package>
     <osgi.bundle.export.package>com.vaadin.flow.component.*;-noimport:=true</osgi.bundle.export.package>
@@ -43,6 +45,8 @@
     <osgi.bundle.package.private/>
     <osgi.bundle.bundle.activator/>
     <osgi.bundle.description/>
+    <osgi.bundle.title>${project.name}</osgi.bundle.title>
+    <osgi.vaadin.package.version>1</osgi.vaadin.package.version>
   </properties>
   <modules>
     <module>vaadin-flow-components-shared</module>
@@ -194,6 +198,8 @@
               <Bundle-Activator>${osgi.bundle.bundle.activator}</Bundle-Activator>
               <Bundle-License>${osgi.bundle.license}</Bundle-License>
               <Bundle-Description>${osgi.bundle.description}</Bundle-Description>
+              <Implementation-Title>${osgi.bundle.title}</Implementation-Title>
+              <Vaadin-Package-Version>${osgi.vaadin.package.version}</Vaadin-Package-Version>
               <_removeheaders>Built-By</_removeheaders>
               <_dsannotations>*</_dsannotations>
               <_metatypeannotations>*</_metatypeannotations>
@@ -245,8 +251,12 @@
                 <goal>deploy-war</goal>
               </goals>
               <configuration>
-                <daemon>true</daemon>
-                <scanIntervalSeconds>0</scanIntervalSeconds>
+                <systemProperties>
+                  <systemProperty>
+                    <name>vaadin.productionMode</name>
+                    <value>true</value>
+                  </systemProperty>
+                </systemProperties>
               </configuration>
             </execution>
             <execution>
@@ -272,12 +282,52 @@
           </executions>
           <configuration>
             <forkCount>${failsafe.forkCount}</forkCount>
+            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
             <reuseForks>true</reuseForks>
+            <trimStackTrace>false</trimStackTrace>
             <systemPropertyVariables>
+              <useLocalWebDriver>${useLocalWebDriver}</useLocalWebDriver>
               <webdriver.chrome.driver>${webdriver.chrome.driver}</webdriver.chrome.driver>
-              <com.vaadin.testbench.Parameters.testsInParallel>${testbench.testsInParalel}</com.vaadin.testbench.Parameters.testsInParallel>
+              <com.vaadin.tests.SharedBrowser.reuseBrowser>${com.vaadin.tests.SharedBrowser.reuseBrowser}</com.vaadin.tests.SharedBrowser.reuseBrowser>
+              <com.vaadin.testbench.Parameters.testsInParallel>${com.vaadin.testbench.Parameters.testsInParallel}</com.vaadin.testbench.Parameters.testsInParallel>
+              <sauce.user>${sauce.user}</sauce.user>
+              <sauce.sauceAccessKey>${sauce.sauceAccessKey}</sauce.sauceAccessKey>
+              <sauce.options>${sauce.options}</sauce.options>
             </systemPropertyVariables>
           </configuration>
+        </plugin>
+        <plugin>
+          <groupId>com.saucelabs.maven.plugin</groupId>
+          <artifactId>sauce-connect-plugin</artifactId>
+          <version>${sauce-connect.version}</version>
+          <configuration>
+            <sauceUsername>${sauce.user}</sauceUsername>
+            <sauceAccessKey>${sauce.sauceAccessKey}</sauceAccessKey>
+            <options>${sauce.options}</options>
+          </configuration>
+          <dependencies>
+            <dependency>
+              <groupId>com.saucelabs</groupId>
+              <artifactId>ci-sauce</artifactId>
+              <version>${ci-sauce.version}</version>
+            </dependency>
+          </dependencies>
+          <executions>
+            <execution>
+              <id>start-sauceconnect</id>
+              <phase>pre-integration-test</phase>
+              <goals>
+                <goal>start-sauceconnect</goal>
+              </goals>
+            </execution>
+            <execution>
+              <id>stop-sauceconnect</id>
+              <phase>post-integration-test</phase>
+              <goals>
+                <goal>stop-sauceconnect</goal>
+              </goals>
+            </execution>
+          </executions>
         </plugin>
         <plugin>
           <artifactId>maven-resources-plugin</artifactId>
@@ -335,6 +385,12 @@
                 <replacement/>
                 <failIfNoMatch>false</failIfNoMatch>
               </configuration>
+            </execution>
+            <execution>
+              <id>parse-version</id>
+              <goals>
+                <goal>parse-version</goal>
+              </goals>
             </execution>
           </executions>
         </plugin>
@@ -414,11 +470,15 @@
                     <name>vaadin.devmode.liveReload.enabled</name>
                     <value>false</value>
                   </property>
+                  <property>
+                    <name>skipJetty</name>
+                    <value>${skipTests}</value>
+                  </property>
                 </properties>
               </configuration>
             </execution>
           </executions>
-        </plugin>        
+        </plugin>
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
           <version>3.1.0</version>
@@ -447,7 +507,7 @@
           <groupId>org.sonatype.plugins</groupId>
           <artifactId>nexus-staging-maven-plugin</artifactId>
           <version>1.0.0</version>
-        </plugin>        
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
